--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <img src="" alt="bktimage" width="129px" height="99px" >
   <form>
     <div class="loginid">
-      <input type="text" class="rounded idinput" placeholder="아이디" aria-label="Recipient's username" aria-describedby="button-addon2">
+      <input type="text" id="userid" value="" placeholder="아이디" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
     </div>
     <button class="btn" type="submit">로그인</button>
     <div class="server">
