--- a/login.html
+++ b/login.html
@@ -12,11 +12,12 @@
   <img src="" alt="bktimage" width="129px" height="99px" >
   <form>
     <div class="loginid">
-      <input type="text" id="userid" value="" placeholder="아이디" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
+      <input type="text" id="userid" value="" placeholder=" 아이디" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
     </div>
     <button class="btn" type="submit">로그인</button>
     <div class="server">
       <span class="new"><a href="">회원가입</a></span>
+      <img src="" alt="">
       <span class="no-id"><a href="">아이디 찾기</a></span>
     </div>
   </form>
