--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="loginstyle.css">
 </head>
 <body>
-  <img src="./img/bkt 누끼.png" alt="bktimage" width="129px" height="99px" >
+  <div class="logo">
+    <img src="./img/bkt 누끼.png" alt="bktimage" width="129px" height="99px" >
+  </div>
   <form>
     <div class="loginid">
       <input type="text" id="userid" value="" placeholder=" 아이디" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
