--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   </div>
   <form>
     <div class="loginid">
-      <input type="text" id="userid" value="" placeholder=" 아이디" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
+      <input type="id" id="userid" value="" placeholder=" 아이디" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
+    </div>
+    <div class="loginpw">
+      <input type="password" id="userpw" value="" placeholder=" 비밀번호" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" required="" aria-invalid="true">
     </div>
     <button class="btn" type="submit">로그인</button>
     <div class="server">
